# ros2_medkit_mcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml  docker-publish.yml
examples/: README.md  mcp-http.json  mcp-stdio.json
src/ros2_medkit_mcp/: __init__.py  client.py  config.py  mcp_app.py  models.py  plugin.py  server_http.py  server_stdio.py
tests/: conftest.py  test_bulkdata_tools.py  test_fault_formatting.py  test_mcp_app.py  test_new_tools.py  test_plugin_discovery.py  test_tools.py
