[tool.poetry]
name = "ros2-medkit-mcp"
version = "0.1.0"
description = "MCP server adapter for ros2_medkit SOVD HTTP API"
authors = ["bburda <bartoszburda93@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "ros2_medkit_mcp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.9.0"
httpx = "^0.28.0"
pydantic = "^2.10.0"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
starlette = "^0.45.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
respx = "^0.22.0"
pre-commit = "^4.0.0"
ruff = "^0.8.6"
mypy = "^1.14.0"

[tool.poetry.scripts]
ros2-medkit-mcp-stdio = "ros2_medkit_mcp.server_stdio:main"
ros2-medkit-mcp-http = "ros2_medkit_mcp.server_http:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-p no:launch_testing -p no:launch_testing_ros -p no:ament_copyright -p no:ament_flake8 -p no:ament_pep257 -p no:ament_xmllint -p no:ament_lint"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["ros2_medkit_mcp"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # HTTP APIs return JSON which is Any
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Some ignores needed for dispatcher pattern
show_error_codes = true
files = ["src/ros2_medkit_mcp"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mcp.*", "httpx.*", "uvicorn.*", "starlette.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ros2_medkit_mcp.mcp_app"
# Dispatcher uses dynamic arg parsing with different types per branch
disable_error_code = ["assignment", "attr-defined"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
